--- a/b/index.htm
+++ b/b/index.htm
@@ -1623,7 +1623,7 @@
                   <typebot-standard style="width: 100%; height: 600px"></typebot-standard>
 
                  <iframe
-  src="https://viewer-production-f1e9.up.railway.app/type1"
+  src="https://app.traderexpertsemgale.com.br/p-de-meia-neto-x1so89l"
   style="border: none; width: 100%; height: 600px"
 ></iframe>
                 </div>
